# test-plugin-system

./: .gitignore  CMakeLists.txt  README.md  configure_vs2019.cmd
application/: CMakeLists.txt
application/src/: interface_storage.cpp  interface_storage.hpp  main.cpp
application/src/interfaces/: setup_interfaces.cpp  setup_interfaces.hpp
application/src/interfaces/bar/: bar000.cpp  bar000.hpp  bar001.cpp  bar001.hpp
application/src/interfaces/foo/: foo000.cpp  foo000.hpp  foo001.cpp  foo001.hpp
plugin1/: CMakeLists.txt
plugin1/src/: plugin1.cpp  plugin1.hpp
plugin2/: CMakeLists.txt
plugin2/src/: plugin2.cpp  plugin2.hpp
plugin_api/: CMakeLists.txt  bar_000.hpp  bar_001.hpp  foo_000.hpp  foo_001.hpp  plugin_001.hpp  plugin_api.hpp
plugin_api/base/: base_interface.hpp  base_plugin.hpp
plugin_api/include/: plugin_api.hpp  plugin_api_macro.hpp
plugin_api/include/base/: base_interface.hpp  base_plugin.hpp
plugin_api/include/interface/: bar_000.hpp  foo_001.hpp
plugin_api/include/plugin/: plugin_000.hpp
plugin_api/src/: interface_storage.cpp  interface_storage.hpp  plugin_api.cpp
